# EISight

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: AURA Progress Report - Phase 2.docx  CLAUDE_SESSION_LOG.md  EISight_Blueprint_v4_0c.tex
firmware/eisight_fw/: README.md  platformio.ini
firmware/eisight_fw/include/: config.h  registers.h
firmware/eisight_fw/src/: ad5933.cpp  ad5933.h  ds18b20.cpp  (+10 more)
hardware/: README.md  bench_session_log.csv  cell_geometry.csv  dc_bias_check.csv  dmm_inventory.csv  i2c_sanity_log.csv  jumper_state.csv  power_rail_check.csv  probe_inventory.csv  resistor_inventory.csv  rfb_inventory.csv
metadata/: README.md  dataset_split_plan.csv  dilution_plan.csv  lactometer_log.csv  milk_session_log.csv  ph_log.csv  sample_inventory.csv  temperature_log.csv
metadata/bench_notes/: 2026-05-05_ad5933_h0_jumper_verification.md  2026-05-05_ad5933_h1_power_rail_sanity.md  2026-05-05_ad5933_h2_i2c_sanity.md  2026-05-05_ds18b20_smoke_test.md  2026-05-05_esp32_only_serial_smoke_test.md
pipeline/: eisight_pipeline.py  requirements.txt
scripts/: create_session.py  validate_logs.py
software/eisight_dashboard/: README.md
software/eisight_logger/: README.md  __init__.py  calibration.py  cli.py  phase.py  plots.py  qc.py  raw_writer.py  schemas.py  serial_listener.py  trusted_band.py  validate_jsonl.py
synthetic_pipeline/: SCOPE.md
tests/synthetic/: README.md  generate_resistor_jsonl.py  test_calibration.py  test_create_session.py  test_gates.py  test_listener_annotations.py  test_plots.py  test_qc.py  test_safety.py  test_schemas.py
(+5 files in other folders)
